# sistema-controle

./: .gitignore  README.md  cliente.py  cliente.spec  docker-compose.yml  servidor.spec  tunnel_address.txt
admin/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
arduino/: arduino.ino  lock_button.ino
client/: CMakeLists.txt
client/src/: keyboard.cpp  keyboard.h  main.cpp  network.cpp  network.h
cliente/: admin_observer.py  cadastrar_pc.py  cliente.py
server/: CMakeLists.txt  servidor.py
server/src/: main.cpp  network.cpp  network.h
servidor/: servidor.py  tunnel_address.txt
shared/: protocol.h
